Fix input overflowing in settings drawer

--- a/packages/block-editor/src/components/link-control/style.scss
+++ b/packages/block-editor/src/components/link-control/style.scss
@@ -432,7 +432,6 @@ $preview-image-height: 140px;
 	order: 30;
 	flex-direction: column;
 	flex-basis: 100%; // occupy full width.
-	overflow: hidden;
 }
 
 // Inner div required to avoid padding/margin
